--- a/index.html
+++ b/index.html
@@ -4,7 +4,51 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-<title> My Student Bio</title>
+<title>My Student Bio</title>
 </head>
+<!-- This is the nave bar -->
+<body>
+    <header>
+        <nav class="text-right">
+            <ul>
+                <li><a href="https://github.com/">Github</a></li>
+                <li> <a href="#">Portfolio</a></li>
+                <li> <a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
+<!-- This is the middle section of the website -->
+<main>
+    <h1 class="text-center">My New Website</h1>
+    <figure>
+      <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
+      <figcaption class="text-center">Bio goes here!</figcaption>
+    </figure>
+    <!-- This is the form for contact -->
+    <section id="contact">
+      <h2 class="text-center">Contact Me</h2>
+      <form>
+        <ul>
+          <li>
+            <label class="text-right" for="name">Name:</label>
+            <input type="text" id="name" name="user-name">
+          </li>
+          <li>
+            <label class="text-right" for="email">Email:</label>
+            <input type="text" id="email" name="user-email">
+          </li>
+        </ul>
+        <div class="text-center">
+          <button type="submit">SEND</button>
+        </div>
+      </form>
+    </section>
+  </main>
 
-<body></body>
+  <footer class="text-center">
+    © 2023 My New Website Productions 
+  </footer>
+    
+</body>
+</html>
