--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </body>
 <!-- This is the middle section of the website -->
 <main>
-    <h1 class="text-center">My New Website</h1>
+    <h1 class="text-center">Jacob's New Website</h1>
     <figure>
       <img src="./assets/images/image-1.png" alt="Graphic with Coming Soon text">
       <figcaption class="text-center">Bio goes here!</figcaption>
